experimental/ir/testdata/fields/maps/collision.proto.stderr.txt
error: `FooBarEntry` declared multiple times
  --> testdata/fields/maps/collision.proto:21:5
   |
21 |     map<int32, int32> foo_bar = 1;
   |     ^^^^^^^^^^^^^^^^^ ------- implies `repeated FooBarEntry`
   |      |
   |      first here, as a message type
22 |
23 |     message FooBarEntry {}
   |             ----------- ...also declared here
   |
   = help: map-typed fields implicitly declare a nested message type: field
           `foo_bar` produces a map entry type `FooBarEntry`

error: `Entry` declared multiple times
  --> testdata/fields/maps/collision.proto:27:5
   |
27 |     map<int32, int32> _ = 1;
   |     ^^^^^^^^^^^^^^^^^ - implies `repeated Entry`
   |      |
   |      first here, as a message type
28 |     map<int32, int32> __ = 2;
   |     ----------------- ...also declared here
   |
   = help: map-typed fields implicitly declare a nested message type: field `_`
           produces a map entry type `Entry`

error: message fields have the same JSON name
  --> testdata/fields/maps/collision.proto:28:23
   |
27 |     map<int32, int32> _ = 1;
   |                       - this implies JSON name ``
28 |     map<int32, int32> __ = 2;
   |                       ^^ this also implies that name

encountered 3 errors
